assets/js/apps/search/components/PreviewCard/EntryPreviewCard.css
.preview-card__close {
    /* position: absolute; */
    /* right: 5%; */
    /* top: 5%; */
}

.preview-card__close button {
    background: none;
	color: inherit;
	border: none;
	padding: 0;
	font: inherit;
	cursor: pointer;
	outline: inherit;
}

.preview-card__body {
    background-color: #fafafa;
    padding: 1.5rem;
    border-style: solid;
    border-width: 1px;
    border-color: #A6A3A3;
    border-radius: 3px;
    /* width: 300px; */
}

.preview-card__body > * {
    padding: 0.2em 0em;
}

.preview-card__button-wrapper--right {
    text-align: right;
}

.preview-card__inline-block-wrapper {
    display: inline-block;
}

.preview-card__button--right {
    display: block;
}

/* parameter table stuff below */

.preview-card__parameter-table {
    margin: 2rem 0rem;
}

.preview-card__header {
    display: flex;
    flex-direction: row;
    align-items: center;
}

.preview-card__header > * {
    display: flex;
    align-items: center;
    margin: 0 0.2em;
}

.preview-card__access-status {
    display: flex;
    align-items: center;
}

.preview-card__access-status > * {
    display: flex;
    align-items: center;
    margin: 0 0.2em;
}

